# z3rm

./: .gitattributes  .gitignore  .rules  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  GEMINI.md  README.md
.github/: CODEOWNERS.hold
.github/workflows/: bump_patch_version.yml  bump_zed_version.yml  compliance_check.yml  deploy_collab.yml  release.yml  release_nightly.yml  run_bundling.yml
assets/settings/: default.json
crates/auto_update/: Cargo.toml
crates/auto_update_helper/: Cargo.toml
crates/auto_update_ui/: Cargo.toml
crates/cli/: Cargo.toml  README.md  build.rs
crates/collab/: .env.toml
crates/copilot_ui/: Cargo.toml
crates/crashes/: Cargo.toml
crates/diagnostics/: Cargo.toml
crates/edit_prediction_cli/: build.rs
crates/editor/: Cargo.toml
crates/etw_tracing/: etw_tracing.rs
crates/eval_cli/: build.rs
crates/extension/: Cargo.toml
crates/extension_cli/: Cargo.toml
crates/extension_host/: Cargo.toml
crates/file_finder/: Cargo.toml
crates/git_ui/: Cargo.toml
crates/gpui/: Cargo.toml
crates/gpui_macos/: Cargo.toml
crates/json_schema_store/: Cargo.toml
crates/language/: Cargo.toml  build.rs
crates/language_selector/: Cargo.toml
crates/mux/: Cargo.toml
crates/z3rm_macros/: Cargo.toml
crates/z3rm_macros/src/: z3rm_macros.rs
docs/: book.toml
nix/: build.nix
script/: bundle-freebsd  bundle-linux  bundle-mac  bundle-windows.ps1  cargo  debug-cli  determine-release-channel  determine-release-channel.ps1  install-linux  install.sh  kube-shell  randomized-test-ci  setup-dev-driver.ps1  snap-build  uninstall.sh  zed-local
(+392 files in other folders)
