[package]
name = "z3rm_macros"
version = "0.1.0"
edition = "2024"
publish = false
license = "Apache-2.0"

[lib]
path = "src/z3rm_macros.rs"
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["full"] }
inventory = "0.3"
z3rm_macros_types = { path = "../z3rm_macros_types" }
